--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,18 @@
 .section__padding {
   padding: 4rem 6rem;
+
+  @media screen and (max-width: 800px) {
+    padding: 4rem;
+  }
+
+  @media screen and (max-width: 550px) {
+    padding: 4rem 2rem; // Change both to '2rem', remove '4rem'
+  }
+}
+
+a {
+  color: unset;
+  text-decoration: none;
 }
 
 .flex__center {
