--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,71 @@
 .section__padding {
   padding: 4rem 6rem;
 
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 1150px) {
     padding: 4rem;
   }
 
+  @media screen and (max-width: 800px) {
+    padding: 3rem 2rem;
+  }
+
   @media screen and (max-width: 550px) {
-    padding: 4rem 2rem; // Change both to '2rem', remove '4rem'
+    padding: 2rem 1rem; // Change both to '2rem', remove '4rem'
   }
 }
 
 a {
   color: unset;
   text-decoration: none;
+}
+
+.head-text {
+  font-size: 3rem;
+  letter-spacing: 6px;
+  line-height: 1.5em;
+  font-weight: 500;
+  color: var(--color-white);
+
+  @media screen and (max-width: 1150px) {
+    font-size: 1.9rem;
+    letter-spacing: 5px;
+  }
+
+  @media screen and (max-width: 800px) {
+    font-size: 1.5rem;
+    letter-spacing: 4.5px;
+  }
+
+  @media screen and (max-width: 550px) {
+    font-size: 1rem;
+    letter-spacing: 3px;
+  }
+}
+
+.p-text {
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  line-height: 33px;
+  color: var(--color-white);
+  padding: 2rem 0 1rem;
+
+  @media screen and (max-width: 1150px) {
+    font-size: 19px;
+    line-height: 30px;
+  }
+
+  @media screen and (max-width: 800px) {
+    font-size: 17px;
+    line-height: 28px;
+  }
+
+  @media screen and (max-width: 550px) {
+    font-size: 15px;
+    letter-spacing: 0.03em;
+    line-height: 25px;
+    padding: 1rem 0 0;
+  }
 }
 
 .flex__center {
