--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,4 +1,4 @@
-.home img {
+.home__caro img {
   padding-top: 5rem;
   width: 100%;
   height: 95vh;
@@ -8,7 +8,7 @@
   }
 
   @media screen and (max-width: 500px) {
-    height: 55vh;
+    height: 50vh;
   }
 }
 
@@ -19,24 +19,21 @@
   flex-direction: column;
   position: absolute;
   top: -40px;
-  left: 60px;
+  left: 90px;
   text-align: left;
 
   width: 48%;
 
-  h3 {
-    font-size: 3rem;
-    letter-spacing: 7px;
-    line-height: 1.5em;
+  @media screen and (max-width: 1150px) {
+    width: 60%;
+    top: 80px;
+    left: 40px;
+  }
 
-    @media screen and (max-width: 800px) {
-      font-size: 1.5rem;
-    }
-
-    @media screen and (max-width: 550px) {
-      font-size: 0.9rem;
-      letter-spacing: 3px;
-    }
+  @media screen and (max-width: 800px) {
+    width: 65%;
+    top: 80px;
+    left: 30px;
   }
 
   @media screen and (max-width: 550px) {
@@ -47,9 +44,44 @@
 }
 
 .watch-now-button {
+  margin-top: 0.5rem;
+
+  @media screen and (max-width: 800px) {
+    font-size: 14px;
+    padding: 8px 14px;
+    margin-top: 0.5rem;
+  }
+
   @media screen and (max-width: 550px) {
     font-size: 12px;
     padding: 6px 14px;
     margin-top: 0.5rem;
+  }
+}
+
+.home__content-2 {
+  background-image: url('https://www.savemom.in/images/indexpage/thirdbannerimg.png');
+  width: 100%;
+  height: 100vh auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  @media screen and (max-width: 550px) {
+    height: 52vh;
+  }
+
+  div {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+
+    width: 65%;
+    height: 100%;
+    // padding-top: 7rem;
+
+    @media screen and (max-width: 800px) {
+      width: 75%;
+    }
   }
 }
