--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -62,12 +62,12 @@
 .home__content-2 {
   background-image: url('https://www.savemom.in/images/indexpage/thirdbannerimg.png');
   width: 100%;
-  height: 100vh auto;
+  height: 90vh;
   background-repeat: no-repeat;
   background-size: cover;
 
-  @media screen and (max-width: 550px) {
-    height: 52vh;
+  @media screen and (max-width: 600px) {
+    height: 43vh;
   }
 
   div {
@@ -78,10 +78,11 @@
 
     width: 65%;
     height: 100%;
-    // padding-top: 7rem;
 
-    @media screen and (max-width: 800px) {
-      width: 75%;
+    padding-top: 4rem;
+
+    @media screen and (max-width: 1000px) {
+      width: 90%;
     }
   }
 }
