--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -43,22 +43,6 @@
   }
 }
 
-.watch-now-button {
-  margin-top: 0.5rem;
-
-  @media screen and (max-width: 800px) {
-    font-size: 14px;
-    padding: 8px 14px;
-    margin-top: 0.5rem;
-  }
-
-  @media screen and (max-width: 550px) {
-    font-size: 12px;
-    padding: 6px 14px;
-    margin-top: 0.5rem;
-  }
-}
-
 .home__content-2 {
   background-image: url('https://www.savemom.in/images/indexpage/thirdbannerimg.png');
   width: 100%;
@@ -79,10 +63,42 @@
     width: 65%;
     height: 100%;
 
-    padding-top: 4rem;
+    // padding-top: 4rem;
 
     @media screen and (max-width: 1000px) {
       width: 90%;
+    }
+  }
+}
+
+.home__content-4 {
+  background-image: url('https://www.savemom.in/images/indexpage/fifthbanner.jpg');
+  width: 100%;
+  height: 90vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  @media screen and (max-width: 800px) {
+    height: 60vh;
+  }
+
+  @media screen and (max-width: 550px) {
+    height: 43vh;
+  }
+
+  div {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+
+    width: 65%;
+    height: 100%;
+
+    // padding-top: 4rem;
+
+    @media screen and (max-width: 1000px) {
+      width: 95%;
     }
   }
 }
