--- a/src/components/WhoWeAre/whoWeAre.scss
+++ b/src/components/WhoWeAre/whoWeAre.scss
@@ -206,3 +206,83 @@
     }
   }
 }
+
+// CONTENT - 3
+.whoweare__content-3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  .content-3_youtube {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    text-align: center;
+    // flex-direction: row;
+    max-width: 96%;
+    position: relative;
+    // display: flex;
+    // align-items: center;
+    // flex-direction: column;
+
+    @media screen and (max-width: 1150px) {
+      max-width: 100%;
+    }
+
+    .content-3_youtube_container {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      flex-direction: row;
+      padding-top: 5rem;
+
+      width: max-content;
+      overflow-x: scroll;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+      @media screen and (max-width: 550px) {
+        padding-top: 2rem;
+      }
+    }
+
+    .content-3_youtube-video {
+      position: relative;
+      min-width: 390px;
+      height: 280px;
+      margin-right: 3rem;
+      // box-shadow: 1px 1px 1px #888;
+
+      @media screen and (max-width: 550px) {
+        min-width: 210px;
+        height: 150px;
+        margin-right: 8px;
+      }
+
+      iframe {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        opacity: 1;
+      }
+    }
+  }
+
+  .content-3_youtube-arrors {
+    padding-top: 2rem;
+
+    .video__arror-icon {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      color: #fff;
+      background-color: #00877c;
+      margin: 0 8px;
+    }
+  }
+}
