--- a/src/components/WhoWeAre/whoWeAre.scss
+++ b/src/components/WhoWeAre/whoWeAre.scss
@@ -214,6 +214,12 @@
   align-items: center;
   flex-direction: column;
 
+  .head-line {
+    width: 80px;
+    height: 2px;
+    background-color: #00877c;
+  }
+
   .content-3_youtube {
     flex: 1;
     display: flex;
@@ -247,7 +253,7 @@
       }
 
       @media screen and (max-width: 550px) {
-        padding-top: 2rem;
+        padding-top: 3rem;
       }
     }
 
