--- a/src/components/WhoWeAre/whoWeAre.scss
+++ b/src/components/WhoWeAre/whoWeAre.scss
@@ -332,3 +332,86 @@
     }
   }
 }
+
+// -------- CONTENT - 4 -----------
+.whoweare__content-5 {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+
+  .head-line {
+    width: 80px;
+    height: 2px;
+    background-color: #00877c;
+  }
+
+  h3 {
+    margin-top: 3.5rem;
+
+    @media screen and (max-width: 550px) {
+      margin-top: 2rem;
+    }
+  }
+
+  p {
+    @media screen and (max-width: 550px) {
+      font-size: 12px;
+      line-height: 1.2em;
+    }
+  }
+
+  .content-5_brand {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    text-align: center;
+    // flex-direction: row;
+    max-width: 100%;
+    position: relative;
+
+    .content-5_brand_container {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      flex-direction: row;
+      padding-top: 5rem;
+
+      width: max-content;
+      overflow-x: scroll;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+      @media screen and (max-width: 550px) {
+        padding-top: 3rem;
+      }
+    }
+
+    .content-5_brand-img {
+      position: relative;
+      min-width: 200px;
+      height: 220px;
+      margin-right: 3rem;
+
+      @media screen and (max-width: 550px) {
+        min-width: 100px;
+        height: 130px;
+        margin-right: 2rem;
+      }
+
+      img {
+        width: 160px;
+        height: 90px;
+
+        @media screen and (max-width: 550px) {
+          width: 80px;
+          height: 60px;
+        }
+      }
+    }
+  }
+}
