whoweare-page COMPLETED

--- a/src/App.scss
+++ b/src/App.scss
@@ -136,6 +136,8 @@ a {
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
+
+  text-align: start;
 }
 
 .app__wrapper_img {
