--- a/src/components/WhoWeAre/whoWeAre.scss
+++ b/src/components/WhoWeAre/whoWeAre.scss
@@ -1,114 +1,114 @@
-.whoweare__about {
-  position: absolute;
-  top: -5%;
-  width: 100vw;
+.whoweare__padding {
+  background-color: transparent;
+  width: 100%;
   height: 60vh;
-  background-image: url('https://www.savemom.in/images/staticpages/achievementbanner.png');
-  background-size: cover;
-  background-repeat: no-repeat;
 
   @media screen and (max-width: 1150px) {
-    top: 5%;
-    height: 50vh;
-  }
-
-  @media screen and (max-width: 900px) {
-    top: 10%;
-    height: 40vh;
+    height: 55vh;
   }
 
   @media screen and (max-width: 800px) {
-    top: 5%;
-    height: 35vh;
-  }
-
-  @media screen and (max-width: 600px) {
-    height: 30vh;
-  }
-
-  @media screen and (max-width: 400px) {
-    top: 7%;
-    height: 25vh;
-  }
-}
-
-.whoweare__about-content {
-  margin: 5rem 0 0 4rem;
-  width: 60%;
-
-  @media screen and (max-width: 1150px) {
-    margin: 1rem 0 0 2.5rem;
-    width: 75%;
-  }
-
-  @media screen and (max-width: 900px) {
-    margin: -1rem 0 0 2rem;
-    width: 90%;
-  }
-
-  @media screen and (max-width: 800px) {
-    margin: 4rem 0 0 2rem;
+    height: 62vh;
   }
 
   @media screen and (max-width: 550px) {
-    margin: 2.5rem 0 0 1rem;
+    height: 50vh;
   }
 
-  @media screen and (max-width: 400px) {
-    margin: 14px 0 0 1rem;
+  @media screen and (max-width: 475px) {
+    height: 53vh;
   }
 
-  p {
-    padding: 0;
-    font-weight: 500;
+  @media screen and (max-width: 370px) {
+    height: 60vh;
+  }
 
-    @media screen and (max-width: 1000px) {
-      font-size: 15px;
+  .whoweare__about {
+    background-image: url('../../assets/achievementbanner.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    position: absolute;
+    width: 100%;
+    height: 60vh;
+
+    @media screen and (max-width: 1150px) {
+      height: 55vh;
     }
 
     @media screen and (max-width: 800px) {
-      color: black;
-      margin-top: 4.5rem;
+      height: 40vh;
+      top: 5%;
+    }
+
+    @media screen and (max-width: 550px) {
+      height: 33vh;
+    }
+
+    @media screen and (max-width: 450px) {
+      top: 7%;
+      height: 25vh;
+    }
+  }
+
+  .whoweare__about-content {
+    margin: 5rem 4rem;
+    width: 60%;
+
+    @media screen and (max-width: 1150px) {
+      width: 75%;
+    }
+
+    @media screen and (max-width: 800px) {
+      width: 80%;
+      margin: 5rem 0 0 2rem;
     }
 
     @media screen and (max-width: 600px) {
-      margin-top: 3.5rem;
+      width: 90%;
+      margin: 3.5rem 0 0 1rem;
     }
 
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: 450px) {
+      margin: 1.5rem 0 0 1rem;
+    }
+  }
+
+  p {
+    font-weight: 500;
+
+    @media screen and (max-width: 800px) {
+      color: black;
       margin-top: 3rem;
     }
 
     @media screen and (max-width: 550px) {
       font-size: 14px;
-      margin-top: 4rem;
+    }
+
+    @media screen and (max-width: 450px) {
+      margin-top: 3.5rem;
     }
   }
 
   h3 {
-    @media screen and (max-width: 1000px) {
-      font-size: 1.7rem;
-    }
-
     @media screen and (max-width: 800px) {
-      font-size: 2rem;
-      margin-top: 5px;
+      font-size: 2.3rem;
     }
 
-    @media screen and (max-width: 500px) {
-      margin-top: 1rem;
+    @media screen and (max-width: 550px) {
+      font-size: 2rem;
     }
 
     @media screen and (max-width: 450px) {
       font-size: 1.7rem;
-      // margin-top: 0;
     }
   }
 }
 
 // -------- CONTENT - 1 -----------
 .whoweare__content-1 {
-  margin-top: 24rem;
+  // margin-top: 24rem;
 
   div {
     display: flex;
