--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -44,7 +44,7 @@
 }
 
 .home__content-2 {
-  background-image: url('https://www.savemom.in/images/indexpage/thirdbannerimg.png');
+  background-image: url('../../assets//thirdbannerimg.png');
   width: 100%;
   height: 90vh;
   background-repeat: no-repeat;
@@ -72,7 +72,7 @@
 }
 
 .home__content-4 {
-  background-image: url('https://www.savemom.in/images/indexpage/fifthbanner.jpg');
+  background-image: url('../../assets//fifthbanner.jpg');
   width: 100%;
   height: 90vh;
   background-repeat: no-repeat;
