--- a/src/components/Product/product.scss
+++ b/src/components/Product/product.scss
@@ -105,3 +105,110 @@
     }
   }
 }
+
+// ---------- CONTENT - 1 ---------------
+.product__content-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 4rem 6rem;
+
+  .product__content-1_head {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .head__line {
+      width: 80px;
+      height: 2px;
+      background-color: #00877c;
+    }
+
+    p {
+      color: #000000a0;
+      padding: 1rem 0 0;
+    }
+  }
+
+  .content-1_mobile {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // text-align: center;
+    // flex-direction: row;
+    max-width: 75%;
+    position: relative;
+    // display: flex;
+    // align-items: center;
+    // flex-direction: column;
+
+    @media screen and (max-width: 1150px) {
+      max-width: 100%;
+    }
+
+    .content-1_mobile_container {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      flex-direction: row;
+      padding-top: 5rem;
+
+      width: max-content;
+      overflow-x: scroll;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+      @media screen and (max-width: 550px) {
+        padding-top: 3rem;
+      }
+    }
+
+    .content-1_mobile-pics {
+      position: relative;
+      min-width: 160px;
+      height: auto;
+      margin-right: 3rem;
+      border: 1px solid rgb(245, 240, 240);
+
+      @media screen and (max-width: 550px) {
+        min-width: 210px;
+        height: 150px;
+        margin-right: 8px;
+      }
+
+      img {
+        width: 100%;
+        height: 50%;
+        object-fit: cover;
+        opacity: 1;
+        box-shadow: 0 15px 30px rgb(0 0 0 / 0.2);
+
+        &:hover {
+          // transform: translatex(10px);
+          transform: translate(10px, -10px);
+          // padding-top: 10px;
+        }
+      }
+    }
+  }
+
+  .content-1_mobile-arrors {
+    padding-top: 2rem;
+
+    .img__arror-icon {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      color: #fff;
+      background-color: #00877c;
+      margin: 0 8px;
+    }
+  }
+}
