--- a/src/components/Product/product.scss
+++ b/src/components/Product/product.scss
@@ -114,6 +114,13 @@
   flex-direction: column;
   padding: 4rem 6rem;
 
+  @media screen and (max-width: 800px) {
+    padding: 4rem;
+  }
+  @media screen and (max-width: 550px) {
+    padding: 2rem;
+  }
+
   .product__content-1_head {
     display: flex;
     justify-content: center;
@@ -128,7 +135,7 @@
 
     p {
       color: #000000a0;
-      padding: 1rem 0 0;
+      padding: 2rem 0 0;
     }
   }
 
@@ -165,35 +172,47 @@
         display: none;
       }
 
+      @media screen and (max-width: 800px) {
+        padding-top: 4rem;
+      }
+
       @media screen and (max-width: 550px) {
-        padding-top: 3rem;
+        padding-top: 2rem;
       }
     }
 
     .content-1_mobile-pics {
       position: relative;
       min-width: 160px;
-      height: auto;
-      margin-right: 3rem;
-      border: 1px solid rgb(245, 240, 240);
+      // height: 50vh;
+      margin: 0 2rem 12px 12px;
 
+      @media screen and (max-width: 800px) {
+        min-width: 120px;
+        margin-right: 0;
+      }
       @media screen and (max-width: 550px) {
-        min-width: 210px;
-        height: 150px;
-        margin-right: 8px;
+        min-width: 80px;
       }
 
       img {
         width: 100%;
-        height: 50%;
+        height: auto;
         object-fit: cover;
         opacity: 1;
-        box-shadow: 0 15px 30px rgb(0 0 0 / 0.2);
+        box-shadow: -5px 3px 16px 2px rgb(0 0 0 / 0.2);
 
         &:hover {
           // transform: translatex(10px);
-          transform: translate(10px, -10px);
+          transform: translate(6px, -6px);
           // padding-top: 10px;
+        }
+
+        @media screen and (max-width: 800px) {
+          width: 90%;
+        }
+        @media screen and (max-width: 550px) {
+          width: 90%;
         }
       }
     }
@@ -209,6 +228,147 @@
       color: #fff;
       background-color: #00877c;
       margin: 0 8px;
+      cursor: pointer;
+
+      @media screen and (max-width: 550px) {
+        width: 20px;
+        height: 20px;
+      }
+    }
+
+    @media screen and (max-width: 550px) {
+      padding-top: 1rem;
+    }
+  }
+}
+
+// ---------- CONTENT - 2 -------------
+.product__content-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #00877c;
+
+  padding: 3rem 6rem;
+
+  @media screen and (max-width: 1150px) {
+    padding: 3rem 4rem;
+  }
+
+  @media screen and (max-width: 800px) {
+    padding: 2rem;
+  }
+
+  @media screen and (max-width: 550px) {
+  }
+
+  h3 {
+    font-size: 1.8rem;
+    padding-right: 20rem;
+
+    @media screen and (max-width: 1150px) {
+      font-size: 1.4rem;
+      padding-right: 15rem;
+    }
+
+    @media screen and (max-width: 800px) {
+      font-size: 1.2rem;
+      letter-spacing: 4px;
+      padding-right: 10rem;
+    }
+
+    @media screen and (max-width: 550px) {
+      font-size: 13px;
+      letter-spacing: 3px;
+      padding-right: 4rem;
+    }
+  }
+
+  img {
+    width: auto;
+    height: 3.5rem;
+
+    @media screen and (max-width: 800px) {
+      height: 2.5rem;
+    }
+
+    @media screen and (max-width: 550px) {
+      height: 2rem;
+    }
+  }
+}
+
+// ----------- CONTENT - 3 -----------------
+.product__content-3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  padding: 4rem 6rem;
+
+  @media screen and (max-width: 1150px) {
+    padding: 4rem;
+  }
+  @media screen and (max-width: 800px) {
+    padding: 4rem 2rem;
+  }
+  @media screen and (max-width: 550px) {
+    padding: 2rem;
+  }
+
+  h3 {
+    padding: 1rem 0 0.5rem;
+  }
+
+  .head__line {
+    width: 80px;
+    height: 2px;
+    background-color: #00877c;
+
+    margin-bottom: 4rem;
+
+    @media screen and (max-width: 400px) {
+      margin-bottom: 3rem;
+    }
+  }
+
+  .product__content-3_info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card {
+    box-shadow: -5px 5px 8px #aaaa;
+    cursor: pointer;
+
+    &:hover {
+      transform: translateY(-10px);
+      box-shadow: -7px 7px 18px 2px #aaaa;
+
+      @media screen and (max-width: 575px) {
+        transform: none;
+      }
+    }
+
+    @media screen and (max-width: 575px) {
+      margin-bottom: 2rem;
+    }
+  }
+
+  .card-text {
+    padding-top: 10px;
+    font-weight: 500;
+    letter-spacing: 0.04em;
+    line-height: 28px;
+    word-spacing: 0.04em;
+    color: #00000097;
+
+    @media screen and (max-width: 1150px) {
+      font-size: 14px;
+      padding-top: 6px;
+      line-height: 24px;
     }
   }
 }
