--- a/src/components/Product/product.scss
+++ b/src/components/Product/product.scss
@@ -72,6 +72,10 @@
     @media screen and (max-width: 450px) {
       margin: 3.5rem 0 0 1rem;
     }
+
+    @media screen and (max-width: 380px) {
+      margin: 1.5rem 0 0 1rem;
+    }
   }
 
   p {
