--- a/src/containers/Contact/contact.scss
+++ b/src/containers/Contact/contact.scss
@@ -167,6 +167,13 @@
   padding: 1rem 0;
   text-align: center;
 
+  @media screen and (max-width: 550px) {
+    padding: 1rem 1.5rem;
+  }
+  @media screen and (max-width: 550px) {
+    padding: 1rem;
+  }
+
   small {
     font-size: 13px;
     color: gray;
@@ -192,6 +199,11 @@
   z-index: 1;
   cursor: pointer;
   color: rgba(128, 0, 128, 0.772);
+
+  svg {
+    background-color: #fff;
+    border-radius: 50%;
+  }
 
   @media screen and (max-width: 750px) {
     font-size: 2.5rem;
