--- a/src/components/Donate/donate.scss
+++ b/src/components/Donate/donate.scss
@@ -46,13 +46,17 @@
     }
 
     @media screen and (max-width: 450px) {
-      top: 7%;
+      top: 3%;
+      height: 25vh;
+    }
+    @media screen and (max-width: 380px) {
+      top: 5%;
       height: 25vh;
     }
   }
 
   .getInvolved__savemom-content {
-    margin: 5rem 4rem;
+    margin: 5rem 0;
     width: 60%;
 
     @media screen and (max-width: 1150px) {
@@ -139,7 +143,7 @@
   .getInvolved__head {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
     padding: 0 0 4rem;
 
@@ -357,5 +361,54 @@
   .adil-link {
     color: #00877c;
     font-weight: 600;
+  }
+}
+
+.form__after-submit {
+  // flex: 1;
+  width: 100%;
+  // height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: -5px 5px 20px 5px #8888;
+
+  @media screen and (max-width: 550px) {
+    // height: 30vh;
+    padding-top: 0;
+  }
+  @media screen and (max-width: 380px) {
+    height: 30vh;
+    padding-top: 0;
+  }
+
+  svg {
+    font-size: 7rem;
+    color: green;
+    margin-bottom: 2rem;
+
+    @media screen and (max-width: 380px) {
+      font-size: 5rem;
+    }
+  }
+
+  h4 {
+    text-align: center;
+
+    @media screen and (max-width: 1150px) {
+      font-size: 1.4rem;
+      padding: 0 1rem;
+    }
+
+    &:first-child {
+      @media screen and (max-width: 380px) {
+        width: 100%;
+        font-size: 5rem;
+        padding: 0;
+        margin: 0;
+        line-height: 1.5rem;
+      }
+    }
   }
 }
