--- a/src/components/HowWeWork/howWeWork.scss
+++ b/src/components/HowWeWork/howWeWork.scss
@@ -45,13 +45,17 @@
     }
 
     @media screen and (max-width: 450px) {
-      top: 7%;
+      top: 3%;
+      height: 25vh;
+    }
+    @media screen and (max-width: 380px) {
+      top: 6%;
       height: 25vh;
     }
   }
 
   .howwework__work-content {
-    margin: 5rem 4rem;
+    margin: 5rem 0;
     width: 60%;
 
     @media screen and (max-width: 1150px) {
@@ -74,6 +78,11 @@
 
     @media screen and (max-width: 380px) {
       margin: 1.5rem 0 0 1rem;
+    }
+
+    h3 {
+      // padding: 0;
+      margin-bottom: -5px;
     }
   }
 
@@ -170,6 +179,7 @@
 
   .sub__head-text {
     font-weight: 600;
+    font-size: 1.7rem;
   }
 
   h3 {
