--- a/src/components/Product/product.scss
+++ b/src/components/Product/product.scss
@@ -46,13 +46,17 @@
     }
 
     @media screen and (max-width: 450px) {
-      top: 7%;
+      top: 3%;
+      height: 25vh;
+    }
+    @media screen and (max-width: 380px) {
+      top: 6%;
       height: 25vh;
     }
   }
 
   .product__savemom-content {
-    margin: 5rem 4rem;
+    margin: 5rem 0;
     width: 60%;
 
     @media screen and (max-width: 1150px) {
@@ -96,6 +100,8 @@
   }
 
   h3 {
+    margin-bottom: 0;
+
     @media screen and (max-width: 800px) {
       font-size: 2.3rem;
     }
@@ -315,7 +321,7 @@
     padding: 4rem;
   }
   @media screen and (max-width: 800px) {
-    padding: 4rem 2rem;
+    padding: 4rem;
   }
   @media screen and (max-width: 550px) {
     padding: 2rem 2rem 0;
@@ -344,6 +350,7 @@
   }
 
   .card {
+    margin-bottom: 4rem;
     box-shadow: -5px 5px 8px #aaaa;
     cursor: pointer;
 
