--- a/src/containers/Contact/contact.scss
+++ b/src/containers/Contact/contact.scss
@@ -215,3 +215,51 @@
     left: 86%;
   }
 }
+
+.form__after-submit {
+  flex: 1;
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  @media screen and (max-width: 550px) {
+    height: 30vh;
+    padding-top: 2rem;
+  }
+  @media screen and (max-width: 380px) {
+    height: 30vh;
+    padding-top: 2rem;
+  }
+
+  svg {
+    font-size: 3rem;
+    color: green;
+    margin-bottom: 2rem;
+
+    @media screen and (max-width: 380px) {
+      font-size: 7rem;
+    }
+  }
+
+  h4 {
+    text-align: center;
+
+    @media screen and (max-width: 1150px) {
+      font-size: 1.4rem;
+      padding: 0 1rem;
+    }
+
+    &:first-child {
+      @media screen and (max-width: 380px) {
+        width: 100%;
+        font-size: 5rem;
+        padding: 0;
+        margin: 0;
+        line-height: 1.5rem;
+      }
+    }
+  }
+}
